Closed Bug 1972100 Opened 1 year ago Closed 1 year ago

Cannot download translated PDF files from Google Translate

Categories

(Web Compatibility :: Site Reports, defect, P1)

Firefox 140

Tracking

(Webcompat Priority:P2, Webcompat Score:6, firefox-esr128 unaffected, firefox-esr140141+ verified, firefox140+ verified, firefox141+ verified, firefox142+ verified)

VERIFIED FIXED
142 Branch
Webcompat Priority P2
Webcompat Score 6
Tracking Status
firefox-esr128 --- unaffected
firefox-esr140 141+ verified
firefox140 + verified
firefox141 + verified
firefox142 + verified

People

(Reporter: szakan, Assigned: farre)

References

(Regression, )

Details

(Keywords: regression, webcompat:platform-bug, webcompat:site-report, Whiteboard: [webcompat:sightline])

User Story

platform:windows,mac,linux
impact:feature-broken
configuration:general
affects:all
branch:release
diagnosis-team:dom
user-impact-score:450

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:140.0) Gecko/20100101 Firefox/140.0

Steps to reproduce:

What did you do?

I used Google Translate (https://translate.google.pl/?sl=en&tl=pl&op=translate) to upload and translate a PDF file.

After the translation finished, I clicked the "Download" button ("Pobierz").

What happened?

Nothing happened — the file did not download. No download dialog appeared.

What did you expect?

The translated PDF should be downloaded, like it does in Chrome and stable Firefox.

Affected version:

  • Firefox 140.0b8 (and earlier betas, e.g. 140.0b1)
  • OS: [Twoja dystrybucja/system np. Ubuntu 24.04 / Windows 11]

Notes:

  • In Firefox 127 stable: ✅ works
  • In Chrome: ✅ works
  • In Firefox 140 beta: ❌ broken
  • Same result in Safe Mode and clean profile

Console output:

"JavaScript warning: unreachable code after return statement"
appears multiple times from an injected script.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Component: Widget: Gtk → Site Reports
Product: Core → Web Compatibility

I think this may be misclassified. The issue only affects downloading a translated PDF in Google Translate, not general GTK UI behavior. It works in Firefox stable and Chrome. Possibly related to CSP, download handling, or scripting behavior.

Affected version:

  • Firefox 140.0b8 (and earlier betas, e.g. 140.0b1)
  • OS (tested on multiple Linux distros):
    • Debian 12 Bookworm
    • Ubuntu 24.04 Noble Numbat
    • Linux Mint 22.1
    • MX Linux 23.6
    • SparkyLinux 7.7
    • LinuxQ83 Chopin 12.11

Krzysztof, since you claim this is a regression, would you be willing to help us figure out what change exactly broke it? There's a tool called mozregression that allows you to somewhat easily do that, check the linked website for instructions. That would help us a lot! :)

Severity: -- → S3
User Story: (updated)
Webcompat Priority: --- → P2
Webcompat Score: --- → 6
Flags: needinfo?(szakan)
Priority: -- → P1
Whiteboard: [webcompat:sightline]

Zewnętrzny html
<button class="VfPpkd-LgbsSe VfPpkd-LgbsSe-OWXEXe-INsAgc VfPpkd-LgbsSe-OWXEXe-Bz112c-M1Soyc Rj2Mlf OLiIxf PDpWxe LQeN7 sWFiQe" jscontroller="soHxf" jsaction="click:cOuCgd(preventDefault=true); mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue; touchstart:p6p2H; touchmove:FwuNnf; touchend:yfqBxc; touchcancel:JMtRjd; focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;mlnRJb:fLiPzd" data-idom-class="Rj2Mlf OLiIxf PDpWxe LQeN7 sWFiQe" jsname="hRZeKc" jslog="172762; track:JIbuQc;" style="--mdc-ripple-fg-size: 116px; --mdc-ripple-fg-scale: 1.7899973566985323; --mdc-ripple-fg-translate-start: 15.91668701171875px, -32px; --mdc-ripple-fg-translate-end: 39.16667175292969px, -40px;"><div class="VfPpkd-Jh9lGc"></div><div class="VfPpkd-J1Ukfc-LhBDec"></div><span class="notranslate VfPpkd-kBDsod uzHXHc" aria-hidden="true"><svg focusable="false" width="18" height="18" viewBox="0 0 24 24" class=" NMm5M"><path d="M4 15h2v3h12v-3h2v3c0 1.1-.9 2-2 2H6c-1.1 0-2-.9-2-2m11.59-8.41L13 12.17V4h-2v8.17L8.41 9.59 7 11l5 5 5-5-1.41-1.41z"></path></svg></span><span jsname="V67aGc" class="VfPpkd-vQzf8d">Pobierz tłumaczenie</span></button>

selektor css
button.VfPpkd-LgbsSe:nth-child(2)

ścieżka css
html body#yDmH0d.tQj5Y.ghyPEc.IqBfM.ecJEib.EWZcud.EIlDfe.cjGgHb.d8Etdd.LcUz9d c-wiz.zQTmif.SSPGKf.kXN2zb.BIdYQ div.T4LgNb div.ToWKne c-wiz.MOkH4e.yF6Zo.MFKVse div.R5HjH c-wiz.k5v5Nb div.oLbzv c-wiz div.eTNoGb div div.RiZzuc div.ld4Jde div.PEVemc.FTPuBd button.VfPpkd-LgbsSe.VfPpkd-LgbsSe-OWXEXe-INsAgc.VfPpkd-LgbsSe-OWXEXe-Bz112c-M1Soyc.Rj2Mlf.OLiIxf.PDpWxe.LQeN7.sWFiQe

xpatch
/html/body/c-wiz/div/div[2]/c-wiz/div[3]/c-wiz/div[2]/c-wiz/div/div[1]/div/div[2]/div/button[1]

Flags: needinfo?(szakan)
Summary: Google Translate download firefox 140 → Cannot download translated PDF files from Google Translate

I got this regressor: Bug 1941725, which looks suspicious, yes.
However, to be more specific,mozregresson tool gave me this phab commit: https://phabricator.services.mozilla.com/D245896 It's the "test case" for Bug 1941725 that is a bit weird.

Flags: needinfo?(afarre)
Severity: S3 → S2
Flags: needinfo?(afarre)
Regressed by: 1941725
Assignee: nobody → afarre
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #9496263 - Attachment description: Bug 1972100 - Only block sandboxed pdfs handle internally. r=smaug! → Bug 1972100 - Only block sandboxed pdfs handled internally. r=smaug!
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch

Set release status flags based on info from the regressing bug 1941725

Comment on attachment 9496263 [details]
Bug 1972100 - Only block sandboxed pdfs handled internally. r=smaug!

Beta/Release Uplift Approval Request

  • User impact if declined/Reason for urgency: Translating PDFs on Google Translate is broken.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See STRs
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small change covered by tests.
  • String changes made/needed:
  • Is Android affected?: No

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Google Translate is broken.
  • User impact if declined: Translating PDFs on Google Translate is broken.
  • Fix Landed on Version: 142
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small change covered by tests.
Attachment #9496263 - Flags: approval-mozilla-release?
Attachment #9496263 - Flags: approval-mozilla-esr140?
Attachment #9496263 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [uplift][qa-ver-needed-c142/b141]

I have reproduced the issue using Firefox 141.0a1 (20250623065250) on Win10, Ubuntu 24.04 and MacOS 15.5 and verified the fix using 142.0a1 (20250624211752).

QA Contact: pmagyari
Attachment #9496263 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Verified fixed on Beta 141.0b5 (20250701164013).

In the beta version 141.0b5 it is good, PDF downloads from www.translate.google.com works

Comment on attachment 9496263 [details]
Bug 1972100 - Only block sandboxed pdfs handled internally. r=smaug!

Approved for 140.0.4

Attachment #9496263 - Flags: approval-mozilla-release? → approval-mozilla-release+

Verified fixed on Firefox 140.0.4 (20250703182918).

Comment on attachment 9496263 [details]
Bug 1972100 - Only block sandboxed pdfs handled internally. r=smaug!

Approved for 140.1esr

Attachment #9496263 - Flags: approval-mozilla-esr140? → approval-mozilla-esr140+

Verified fixed on ESR 140.1.0 (20250708174826)

Status: RESOLVED → VERIFIED
Flags: qe-verify+
QA Whiteboard: [uplift][qa-ver-needed-c142/b141] → [uplift][qa-ver-done-c142/b141/r140]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: