Bug 1972100 - Only block sandboxed pdfs handled internally. r=smaug a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D254662